--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,8 +28,7 @@
     "no-unused-vars": [
       1,
       {
-        "ignoreSiblings": true,
-        "argsIgnorePattern": "res|next|^err"
+        "ignoreSiblings": true
       }
     ],
     "prefer-const": [
