--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@testing-library/react": "^10.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
